[package]
name = "commander"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
futures = { version = "0.3", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
wit-bindgen = { workspace = true }
